fixed logo image overflow in site builder

--- a/src/components/SiteBuilder/sections/Brand/BrandForm.module.scss
+++ b/src/components/SiteBuilder/sections/Brand/BrandForm.module.scss
@@ -1,9 +1,11 @@
 .brand__wrapper {
   background-color: var(--bg-content-form);
   padding: 20px;
+
   h4 {
     margin: 0;
   }
+
   img {
     cursor: pointer;
     border: 1px solid var(--border-color);
@@ -11,17 +13,22 @@
     border-radius: 4px;
     transition: all 0.4s ease-in;
     width: auto;
+    max-width: 250px;
+    height: auto;
+
     &:hover {
       border: 1px solid var(--btn-primary);
     }
   }
+
   .segment {
     background-color: var(--bg-segment);
+
     .segment__labels {
       line-height: 0;
       padding: 5px 0px;
 
-      > div {
+      >div {
         padding: 0px 17px;
         line-height: 0;
         min-height: 0;
@@ -33,13 +40,15 @@
       }
     }
   }
+
   .form__color__picker {
     height: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100px;
-    > div:first-child {
+
+    >div:first-child {
       width: 90px;
       margin: 0 auto;
     }
